FlightPath 7.x Changelog
========================

2024-03-15
  Fixed various deprecated warnings for PHP 8.2.
  
  Fixed issue where substitutions were no longer working, due to changes in how PHP 8.2
  compares numbers and strings.
  
  Added new function fp_trim(), which is meant to act as a drop-in replacement for trim(),
  except that it can accept NULL or FALSE and return ''.  Regular trim() cannot do this
  without triggering a deprecated warning.
  

2024-01-26
  Fixing warnings in stats module.
  

2024-01-07
  Updated signalwire library for PHP 8.x, made modifications to it for FlightPath (removed need for \twilio\Fax, which wasn't included)

  Continuing to clean code of deprecated an warning messages.
  
  Added a more robust UID when sending calendar invites, to better ensure uniqueness.
 
  DatabaseHandler->get_student_name() returns "Unknown Student" if it cannot find the student.

  Had an issue where if a hidden form variable (using FAPI) was '0', then it was not correctly
  being handled in the Content module.


2023-12-02
  Updated TinyMCE to version 5.10.9 (current stable release at the time of this writing)
  
  Updated jQuery to 3.7.1 (current stable release at the time of this writing)
  
  Updated jQuery UI to 13.1.2 (current stable release at the time of this writing)
  
  Renamed the "core" theme to simply fp_clean, instead of "fp6_clean".  Made adjustments to code to use this name.
  
  Continuing to clean code of deprecated and warning messages.
  

2023-12-01
  Initial move to new 7.x branch, from the 6.x branch.  The primary goal of this branch (while in a "dev" state) is
  to move to compatibility with PHP 8.x.

  Cleaning code of deprecated & warning messages.